--- a/Frontend/css/modal.css
+++ b/Frontend/css/modal.css
@@ -1,96 +1,146 @@
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        /* The Modal (background) */
-        
-        .modal {
-            display: none;
-            /* Hidden by default */
-            position: fixed;
-            /* Stay in place */
-            z-index: 1;
-            /* Sit on top */
-            padding-top: 100px;
-            /* Location of the box */
-            left: 0;
-            top: 0;
-            width: 100%;
-            /* Full width */
-            height: 100%;
-            /* Full height */
-            overflow: auto;
-            /* Enable scroll if needed */
-            background-color: rgb(0, 0, 0);
-            /* Fallback color */
-            background-color: rgba(0, 0, 0, 0.4);
-            /* Black w/ opacity */
-        }
-        /* Modal Content */
-        
-        .modal-content {
-            position: relative;
-            background-color: #fefefe;
-            margin: auto;
-            padding: 0;
-            border: 1px solid #888;
-            width: 80%;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            -webkit-animation-name: animatetop;
-            -webkit-animation-duration: 0.4s;
-            animation-name: animatetop;
-            animation-duration: 0.4s
-        }
-        /* Add Animation */
-        
-        @-webkit-keyframes animatetop {
-            from {
-                top: -300px;
-                opacity: 0
+            body {
+                font-family: Arial, Helvetica, sans-serif;
             }
-            to {
+            /* The Modal (background) */
+            
+            .modal {
+                display: none;
+                /* Hidden by default */
+                position: fixed;
+                /* Stay in place */
+                z-index: 1;
+                /* Sit on top */
+                padding-top: 100px;
+                /* Location of the box */
+                left: 0;
                 top: 0;
-                opacity: 1
+                width: 100%;
+                /* Full width */
+                height: 100%;
+                /* Full height */
+                overflow: auto;
+                /* Enable scroll if needed */
+                background-color: rgb(0, 0, 0);
+                /* Fallback color */
+                background-color: rgba(0, 0, 0, 0.4);
+                /* Black w/ opacity */
             }
-        }
-        
-        @keyframes animatetop {
-            from {
-                top: -300px;
-                opacity: 0
+            /* Modal Content */
+            
+            .modal-content {
+                position: relative;
+                background-color: #fefefe;
+                margin: auto;
+                padding: 0;
+                border: 1px solid #888;
+                width: 80%;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                -webkit-animation-name: animatetop;
+                -webkit-animation-duration: 0.4s;
+                animation-name: animatetop;
+                animation-duration: 0.4s
             }
-            to {
-                top: 0;
-                opacity: 1
+            /* Add Animation */
+            
+            @-webkit-keyframes animatetop {
+                from {
+                    top: -300px;
+                    opacity: 0
+                }
+                to {
+                    top: 0;
+                    opacity: 1
+                }
             }
-        }
-        /* The Close Button */
-        
-        .close {
-            color: white;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-        
-        .close:hover,
-        .close:focus {
-            color: #000;
-            text-decoration: none;
-            cursor: pointer;
-        }
-        
-        .modal-header {
-            padding: 2px 16px;
-            background-color: #5cb85c;
-            color: white;
-        }
-        
-        .modal-body {
-            padding: 2px 16px;
-        }
-        
-        .modal-footer {
-            padding: 2px 16px;
-            background-color: #5cb85c;
-            color: white;
-        }
+            
+            @keyframes animatetop {
+                from {
+                    top: -300px;
+                    opacity: 0
+                }
+                to {
+                    top: 0;
+                    opacity: 1
+                }
+            }
+            /* The Close Button */
+            
+            .close {
+                color: white;
+                float: right;
+                font-size: 28px;
+                font-weight: bold;
+            }
+            
+            .close:hover,
+            .close:focus {
+                color: #000;
+                text-decoration: none;
+                cursor: pointer;
+            }
+            
+            .modal-header {
+                padding: 2px 16px;
+                background-color: #e0e0e0;
+                color: white;
+            }
+            
+            .modal-body {
+                padding: 2px 16px;
+            }
+            
+            .modal-footer {
+                padding: 2px 16px;
+                background-color: #e0e0e0;
+                color: white;
+            }
+            
+            .button {
+                background-color: #FF4081;
+                margin-left: 30%;
+                margin-bottom: 20px;
+                width: 40%;
+                border: none;
+                color: white;
+                padding: 16px 32px;
+                text-align: center;
+                font-size: 16px;
+                /* margin: 4px 2px; */
+                /* opacity: 0.6; */
+                transition: 0.3s;
+                display: inline-block;
+                text-decoration: none;
+                cursor: pointer;
+                border-radius: 5px;
+            }
+            
+            .button:hover {
+                opacity: 1;
+            }
+            
+            #IMG_PRODUTO {
+                margin-left: 25%;
+                width: 50%;
+                position: relative;
+                align-content: space-around;
+            }
+            
+            .id_PRODUTO {
+                position: relative;
+                align-content: space-around;
+                border: none;
+                color: white;
+                padding: 3px 3px;
+                text-align: left;
+                font-size: 10px;
+                top: -5px;
+                margin-left: 25%;
+                width: 50%;
+                background-color: #FF4081;
+                border-radius: 0px 0px 5px 5px;
+            }
+            
+            .NOME_PRODUTO {
+                font-size: 20px;
+                margin-left: 25%;
+            }
