--- a/Frontend/css/modal.css
+++ b/Frontend/css/modal.css
@@ -1,29 +1,20 @@
             body {
                 font-family: Arial, Helvetica, sans-serif;
+                overflow: hidden;
             }
-         
             
             .modal {
                 display: none;
-                /* Hidden by default */
                 position: fixed;
-                /* Stay in place */
                 z-index: 1;
-                /* Sit on top */
-                padding-top: 100px;
-                /* Location of the box */
+                padding-top: 10px;
                 left: 0;
                 top: 0;
                 width: 100%;
-                /* Full width */
                 height: 100%;
-                /* Full height */
-                overflow: auto;
-                /* Enable scroll if needed */
+                overflow: hidden;
                 background-color: rgb(0, 0, 0);
-                /* Fallback color */
                 background-color: rgba(0, 0, 0, 0.4);
-                /* Black w/ opacity */
             }
             
             .modal-content {
@@ -39,7 +30,7 @@
                 animation-name: animatetop;
                 animation-duration: 0.4s
             }
-            /* Anicação */
+            /* Animação */
             
             @-webkit-keyframes animatetop {
                 from {
