--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -1,4 +1,3 @@
-
 nav {
     height: 60px;
     background-color: #e0e0e0;
@@ -8,20 +7,16 @@ nav {
     align-content: flex-end;
 }
 
-input {
+#barraPesquisa {
     width: 65%;
     height: 50%;
-    /* box-sizing: border-box; */
+    margin-right: 5%;
+    box-sizing: border-box;
     border: 2px solid #ccc;
-    /* border-radius: 4px; */
-    /* font-size: 16px; */
-    /* background-color: white; */
     background-image: url('../img/lupa.png');
-    /* background-position: 10px 8px; */
     background-repeat: no-repeat;
     padding: 20px 25px 16px 40px;
     border-radius: 50px;
-    /* margin-top: 10px; */
 }
 
 .flexbox {
@@ -37,10 +32,12 @@ input {
 } */
 
 .logotipo {
+    position: relative;
+    top: 10px;
     margin-left: 40px;
     margin-right: 50px;
     width: 90px;
-    height: 50px;
+    height: 100%;
 }
 
 
@@ -55,7 +52,6 @@ input {
     width: 50%;
     height: 50%;
     background-image: url('../img/btn.png');
-    /* border: 2px solid black; */
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -103,5 +99,3 @@ input {
 .dropdown:hover .dropbtn {
     background-color: #e0e0e0;
 }
-
-
