--- a/css/modal.css
+++ b/css/modal.css
@@ -1,4 +1,4 @@
-            body {
+                    /* body {
                 font-family: Arial, Helvetica, sans-serif;
             }
             
@@ -28,32 +28,32 @@
                 -webkit-animation-duration: 0.4s;
                 animation-name: animatetop;
                 animation-duration: 0.4s
-            }
-            /* Animação */
-            
-            @-webkit-keyframes animatetop {
-                from {
-                    top: -300px;
-                    opacity: 0
+            } */
+                /* Animação */
+                
+                @-webkit-keyframes animatetop {
+                    from {
+                        top: -300px;
+                        opacity: 0
+                    }
+                    to {
+                        top: 0;
+                        opacity: 1
+                    }
                 }
-                to {
-                    top: 0;
-                    opacity: 1
+                
+                @keyframes animatetop {
+                    from {
+                        top: -300px;
+                        opacity: 0
+                    }
+                    to {
+                        top: 0;
+                        opacity: 1
+                    }
                 }
-            }
-            
-            @keyframes animatetop {
-                from {
-                    top: -300px;
-                    opacity: 0
-                }
-                to {
-                    top: 0;
-                    opacity: 1
-                }
-            }
-            /* O botão de fechar */
-            
+                /* O botão de fechar */
+                /*             
             .close {
                 color: white;
                 float: right;
@@ -82,31 +82,31 @@
                 padding: 2px 16px;
                 background-color: #e0e0e0;
                 color: white;
-            }
-            
-            .button {
-                background-color: #FF4081;
-                margin-left: 30%;
-                margin-bottom: 20px;
-                width: 40%;
-                border: none;
-                color: white;
-                padding: 16px 32px;
-                text-align: center;
-                font-size: 16px;
-                /* margin: 4px 2px; */
-                /* opacity: 0.6; */
-                transition: 0.3s;
-                display: inline-block;
-                text-decoration: none;
-                cursor: pointer;
-                border-radius: 5px;
-            }
-            
-            .button:hover {
-                opacity: 1;
-            }
-            
+            } */
+                
+                .button {
+                    background-color: #FF4081;
+                    margin-left: 30%;
+                    margin-bottom: 20px;
+                    width: 40%;
+                    border: none;
+                    color: white;
+                    padding: 16px 32px;
+                    text-align: center;
+                    font-size: 16px;
+                    /* margin: 4px 2px; */
+                    /* opacity: 0.6; */
+                    transition: 0.3s;
+                    display: inline-block;
+                    text-decoration: none;
+                    cursor: pointer;
+                    border-radius: 5px;
+                }
+                
+                .button:hover {
+                    opacity: 1;
+                }
+                /*             
             #IMG_PRODUTO {
                 margin-left: 25%;
                 width: 50%;
@@ -132,29 +132,29 @@
             .NOME_PRODUTO {
                 font-size: 20px;
                 margin-left: 25%;
-            }
-            /* RESPNSIVIDADE */
-            
-            @media (min-width: 600px) {
-                .button {
-                    background-color: #FF4081;
-                    margin-left: 20%;
-                    margin-bottom: 20px;
-                    width: 60%;
-                    border: none;
-                    color: white;
-                    padding: 16px 32px;
-                    text-align: center;
-                    font-size: 16px;
-                    /* margin: 4px 2px; */
-                    /* opacity: 0.6; */
-                    transition: 0.3s;
-                    display: inline-block;
-                    text-decoration: none;
-                    cursor: pointer;
-                    border-radius: 5px;
-                }
-                #IMG_PRODUTO {
+            } */
+                /* RESPNSIVIDADE */
+                
+                @media (min-width: 600px) {
+                    .button {
+                        background-color: #FF4081;
+                        margin-left: 20%;
+                        margin-bottom: 20px;
+                        width: 60%;
+                        border: none;
+                        color: white;
+                        padding: 16px 32px;
+                        text-align: center;
+                        font-size: 16px;
+                        /* margin: 4px 2px; */
+                        /* opacity: 0.6; */
+                        transition: 0.3s;
+                        display: inline-block;
+                        text-decoration: none;
+                        cursor: pointer;
+                        border-radius: 5px;
+                    }
+                    /* #IMG_PRODUTO {
                     margin-left: 15%;
                     width: 70%;
                     position: relative;
@@ -177,5 +177,68 @@
                 .NOME_PRODUTO {
                     font-size: 20px;
                     margin-left: 25%;
-                }
-            }
+                 }
+            } */
+                    img {
+                        border-radius: 10px;
+                        cursor: pointer;
+                    }
+                    .modalVisual {
+                        display: none;
+                        position: fixed;
+                        z-index: 1;
+                        padding-top: 10px;
+                        left: 0;
+                        top: 0;
+                        width: 100%;
+                        height: 100%;
+                        overflow: hidden;
+                        background-color: rgba(0, 0, 0, 0.8);
+                    }
+                    /* ############################################################################################################### */
+                    /*################[ Conteúdo que está detnro do modal [imagem + REF + Nome] ]#########################*/
+                    /* ############################################################################################################### */
+                    .modalConteudo {
+                        margin: auto;
+                        display: block;
+                        width: 50%;
+                        /* max-width: 800px; */
+                    }
+                    #txtImg {
+                        margin: auto;
+                        display: block;
+                        width: 80%;
+                        max-width: 700px;
+                        text-align: center;
+                        color: #ccc;
+                        padding: 10px 0;
+                        height: 150px;
+                    }
+                    .fechar {
+                        position: fixed;
+                        top: -8px;
+                        color: white;
+                        /* right: 35px; */
+                        /* position: initial; */
+                        font-size: 40px;
+                        font-weight: bold;
+                        /* cursor: pointer; */
+                    }
+                    .fechar:hover,
+                    .fechar:focus {
+                        color: #000;
+                        text-decoration: none;
+                        cursor: pointer;
+                    }
+                    /* MINHAS CONFIGURAÕES*/
+                    .modal-content {
+                        background-color: #fefefe;
+                        margin: auto;
+                        /* padding: 20px; */
+                        border: 1px solid #888;
+                        width: 80%;
+                    }
+                    .headerModal {
+                        background-color: #888;
+                        height: 20px;
+                    }
